// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VmDetails vm NodeLink /> renders correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
  </h1>
  <div>
    <div
      class="row"
    >
      <div
        class="col-sm-4"
      >
        <dl>
          <dt>
            Name
          </dt>
          <dd>
            my-vm
          </dd>
          <dt>
            Description
          </dt>
          <dd>
            <div
              class="description-text"
            >
              VM has no description
            </div>
          </dd>
        </dl>
      </div>
      <div
        class="col-sm-8"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-4"
          >
            <dl>
              <dt>
                Status
              </dt>
              <dd>
                <span
                  aria-hidden="true"
                  class="vm-status-icon pficon pficon-off"
                />
                Off
              </dd>
              <dt>
                Operating System
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                IP Addresses
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                Workload Profile
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                Template
              </dt>
              <dd>
                ---
              </dd>
            </dl>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              ---
            </dd>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails vm NodeLink /> renders off status correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
  </h1>
  <div>
    <div
      class="row"
    >
      <div
        class="col-sm-4"
      >
        <dl>
          <dt>
            Name
          </dt>
          <dd>
            my-vm
          </dd>
          <dt>
            Description
          </dt>
          <dd>
            <div
              class="description-text"
            >
              VM has no description
            </div>
          </dd>
        </dl>
      </div>
      <div
        class="col-sm-8"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-4"
          >
            <dl>
              <dt>
                Status
              </dt>
              <dd>
                <span
                  aria-hidden="true"
                  class="vm-status-icon pficon pficon-off"
                />
                Off
              </dd>
              <dt>
                Operating System
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                IP Addresses
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                Workload Profile
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                Template
              </dt>
              <dd>
                ---
              </dd>
            </dl>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              ---
            </dd>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails vm NodeLink /> renders on status correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
  </h1>
  <div>
    <div
      class="row"
    >
      <div
        class="col-sm-4"
      >
        <dl>
          <dt>
            Name
          </dt>
          <dd>
            my-vm
          </dd>
          <dt>
            Description
          </dt>
          <dd>
            <div
              class="description-text"
            >
              VM has no description
            </div>
          </dd>
        </dl>
      </div>
      <div
        class="col-sm-8"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-4"
          >
            <dl>
              <dt>
                Status
              </dt>
              <dd>
                <span
                  aria-hidden="true"
                  class="vm-status-icon pficon pficon-on-running"
                />
                Running
              </dd>
              <dt>
                Operating System
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                IP Addresses
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                Workload Profile
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                Template
              </dt>
              <dd>
                ---
              </dd>
            </dl>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              ---
            </dd>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails vm vmi NodeLink /> renders IP addresses correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
  </h1>
  <div>
    <div
      class="row"
    >
      <div
        class="col-sm-4"
      >
        <dl>
          <dt>
            Name
          </dt>
          <dd>
            my-vm
          </dd>
          <dt>
            Description
          </dt>
          <dd>
            <div
              class="description-text"
            >
              VM has no description
            </div>
          </dd>
        </dl>
      </div>
      <div
        class="col-sm-8"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-4"
          >
            <dl>
              <dt>
                Status
              </dt>
              <dd>
                <span
                  aria-hidden="true"
                  class="vm-status-icon pficon pficon-on-running"
                />
                Running
              </dd>
              <dt>
                Operating System
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                IP Addresses
              </dt>
              <dd>
                172.17.0.15,172.17.0.16,172.17.0.17
              </dd>
              <dt>
                Workload Profile
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                Template
              </dt>
              <dd>
                ---
              </dd>
            </dl>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              ---
            </dd>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VmDetails for VM with Custom flavor does not render CPU and Memory settings for VM without custom flavor 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
  </h1>
  <div>
    <div
      class="row"
    >
      <div
        class="col-sm-4"
      >
        <dl>
          <dt>
            Name
          </dt>
          <dd>
            my-vm
          </dd>
          <dt>
            Description
          </dt>
          <dd>
            <div
              class="description-text"
            >
              VM has no description
            </div>
          </dd>
        </dl>
      </div>
      <div
        class="col-sm-8"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-4"
          >
            <dl>
              <dt>
                Status
              </dt>
              <dd>
                <span
                  aria-hidden="true"
                  class="vm-status-icon pficon pficon-off"
                />
                Off
              </dd>
              <dt>
                Operating System
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                IP Addresses
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                Workload Profile
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                Template
              </dt>
              <dd>
                ---
              </dd>
            </dl>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                small
              </div>
            </dd>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VmDetails for VM with Custom flavor renders CPU and Memory settings for VM with custom flavor 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
  </h1>
  <div>
    <div
      class="row"
    >
      <div
        class="col-sm-4"
      >
        <dl>
          <dt>
            Name
          </dt>
          <dd>
            my-vm
          </dd>
          <dt>
            Description
          </dt>
          <dd>
            <div
              class="description-text"
            >
              VM has no description
            </div>
          </dd>
        </dl>
      </div>
      <div
        class="col-sm-8"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-4"
          >
            <dl>
              <dt>
                Status
              </dt>
              <dd>
                <span
                  aria-hidden="true"
                  class="vm-status-icon pficon pficon-on-running"
                />
                Running
              </dd>
              <dt>
                Operating System
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                IP Addresses
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                Workload Profile
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                Template
              </dt>
              <dd>
                ---
              </dd>
            </dl>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                Custom
              </div>
              <div>
                2 CPU, 4G Memory
              </div>
            </dd>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VmDetails with description renders description correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
  </h1>
  <div>
    <div
      class="row"
    >
      <div
        class="col-sm-4"
      >
        <dl>
          <dt>
            Name
          </dt>
          <dd>
            my-vm
          </dd>
          <dt>
            Description
          </dt>
          <dd>
            <div
              class="description-text"
            >
              This VM has a description
            </div>
          </dd>
        </dl>
      </div>
      <div
        class="col-sm-8"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-4"
          >
            <dl>
              <dt>
                Status
              </dt>
              <dd>
                <span
                  aria-hidden="true"
                  class="vm-status-icon pficon pficon-off"
                />
                Off
              </dd>
              <dt>
                Operating System
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                IP Addresses
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                Workload Profile
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                Template
              </dt>
              <dd>
                ---
              </dd>
            </dl>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              ---
            </dd>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VmDetails with labels renders values from labels correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
  </h1>
  <div>
    <div
      class="row"
    >
      <div
        class="col-sm-4"
      >
        <dl>
          <dt>
            Name
          </dt>
          <dd>
            my-vm
          </dd>
          <dt>
            Description
          </dt>
          <dd>
            <div
              class="description-text"
            >
              VM has no description
            </div>
          </dd>
        </dl>
      </div>
      <div
        class="col-sm-8"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-4"
          >
            <dl>
              <dt>
                Status
              </dt>
              <dd>
                <span
                  aria-hidden="true"
                  class="vm-status-icon pficon pficon-on-running"
                />
                Running
              </dd>
              <dt>
                Operating System
              </dt>
              <dd>
                fedora29
              </dd>
              <dt>
                IP Addresses
              </dt>
              <dd>
                ---
              </dd>
              <dt>
                Workload Profile
              </dt>
              <dd>
                generic
              </dd>
              <dt>
                Template
              </dt>
              <dd>
                default_fedora-generic
              </dd>
            </dl>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </div>
          <div
            class="col-sm-4"
          >
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                small
              </div>
            </dd>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
